--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_svg:
+  flutter_chat_bubble:
+  emoji_picker_flutter:
+  provider:
+  shared_preferences:
+
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +61,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -99,7 +107,7 @@ flutter:
           style: italic
         - asset: assets/fonts/public_sans/PublicSans-Light.ttf
           weight: 300
-        - asset: assets/fonts/public_sans/PublicSans-LightItalic.ttf 
+        - asset: assets/fonts/public_sans/PublicSans-LightItalic.ttf
           weight: 300
           style: italic
         - asset: assets/fonts/public_sans/PublicSans-Medium.ttf
