Added fetching chats and messages, and uploading and loading images - Added the currectPdp to AppStateManager, but I'm about to remove it cause it's buggy and throws null after refresh or one use (I guess)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,12 @@ dependencies:
   emoji_picker_flutter:
   provider:
   shared_preferences:
+  url_launcher:
+  http:
+  file_picker:
+  timeago:
 
+  # intl_phone_number_input:
 
 dev_dependencies:
   flutter_test:
