--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,16 @@ dependencies:
   http:
   file_picker:
   timeago:
+  # zego_zim:
+  # zego_zimkit:
+  stomp_dart_client:
+  web_socket_channel:
+  # zego_express_engine: ^3.15.1+2
 
+  zego_uikit_signaling_plugin: ^1.4.0
+  zego_uikit_prebuilt_call: ^1.4.2
+  # zego_uikit_signaling_plugin:
+  # zego_uikit_prebuilt_call:
   # intl_phone_number_input:
 
 dev_dependencies:
