--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,14 +47,15 @@ dependencies:
   # zego_zimkit:
   stomp_dart_client:
   web_socket_channel:
-  # zego_express_engine: ^3.15.1+2
+  zego_express_engine:
+  # zego_uikit: ^2.22.8
+  # zego_uikit_prebuilt_call: ^4.11.6
+  # zego_uikit_signaling_plugin: ^2.7.12
 
-  # zego_uikit_signaling_plugin: ^1.4.0
-  # zego_uikit_prebuilt_call: ^1.4.2
-  # zego_uikit_signaling_plugin:
-  # zego_uikit_prebuilt_call:
-  zego_uikit_prebuilt_call: ^4.12.3
   uuid:
+
+  permission_handler:
+  permission_handler_web:
 
   # intl_phone_number_input:
 
