--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_chat_bubble:
   emoji_picker_flutter:
   provider:
+  webview_flutter:
   shared_preferences:
   url_launcher:
   http:
