--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   collection: ^1.18.0
   uuid: ^4.4.0
   stomp_dart_client: ^2.0.0
+  avatar_glow: ^3.0.1
 
 dev_dependencies:
   flutter_test:
