--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,13 +39,14 @@ dependencies:
   provider: ^6.1.2
   shared_preferences: ^2.2.3
   url_launcher: ^6.3.0
-  http: ^0.13.6
+  http: ^1.2.1
   file_picker: ^6.2.1
   timeago: ^3.6.1
   collection: ^1.18.0
   uuid: ^4.4.0
   stomp_dart_client: ^2.0.0
   avatar_glow: ^3.0.1
+  extended_image: ^8.2.1
 
 dev_dependencies:
   flutter_test:
